--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/header.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/header.html
@@ -33,7 +33,7 @@
                                             <div class="sherah-header__right">
                                                 <!-- Dark Light Button -->
                                                 <div class="sherah-dark-light">
-                                                    <button id="sherah-dark-light-button">
+                                                    <button id="sherah-dark-light-button" type="button">
                                                         <svg class="sherah-offset__fill"
                                                             xmlns="http://www.w3.org/2000/svg" width="26.536"
                                                             height="26" viewBox="0 0 26.536 26">
