--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/index.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/index.html
@@ -14,7 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Site Title -->
-	<title>Sherah - HTML eCommerce Dashboard Template</title>
+	<title>Provider Dashboard</title>
 
 	<!-- Font -->
 	<link
