--- a/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/upload-product.html
+++ b/FE/Manager/ExeManager/nta0309-ecommerce-admin-dashboard.netlify.app/upload-product.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Site Title -->
-    <title>Sherah - HTML eCommerce Dashboard Template</title>
+    <title>Upload Product</title>
 
     <!-- Font -->
     <link
